--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,4 +5,6 @@
     <dimen name="dimen220">220dp</dimen>
     <dimen name="dimen360">360dp</dimen>
 
+
+    <dimen name="sp20">20sp</dimen>
 </resources>
