--- a/app/src/main/res/layout/activity_halaman1.xml
+++ b/app/src/main/res/layout/activity_halaman1.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:id="@+id/img_logo"
         android:layout_width="wrap_content"
-        android:layout_height="220dp"
+        android:layout_height="@dimen/dimen220"
         android:src="@drawable/ic_get_start_timitory"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
@@ -24,7 +24,7 @@
         android:text="Monitory Membantu Anda"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textSize="25sp"
+        android:textSize="@dimen/sp25"
         android:textStyle="bold"
         android:textColor="@color/black3"
         />
@@ -36,7 +36,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/teks1_halaman1"
         android:text="Mengontrol HP Anak"
-        android:textSize="25sp"
+        android:textSize="@dimen/sp25"
         android:textStyle="bold"
         android:textColor="@color/black3"
         />
@@ -58,6 +58,7 @@
             android:text="Mulai"
             android:textStyle="bold"
             android:textColor="@color/black3"
+            android:onClick="pindahLogin"
             />
     </RelativeLayout>
 
